# AndroidXroar

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/xroar/: index.html  software.js  xroar-wasm.css  xroar.js
app/src/main/java/com/tazrog/xroar/: MainActivity.kt
app/src/main/java/com/tazrog/xroar/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_xroar_wasm.sh
xroar-1.10/: ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  ar-lib  config.h  config.h.in  config.status  configure  configure.ac  top-config.h
xroar-1.10/doc/: Makefile  Makefile.am  Makefile.in  building-for-windows.md  texinfo.tex  version.texi  xroar-example.conf  xroar.1  xroar.1.in  xroar.info  xroar.texi
xroar-1.10/portalib/: Makefile  Makefile.am  Makefile.in  intfuncs.c  intfuncs.h  sdsx.c
xroar-1.10/portalib/.deps/: c-ctype.Po  c-strcasecmp.Po  c-strncasecmp.Po  delegate.Po  intfuncs.Po  pl-estrcpy.Po  sds.Po  sdsx.Po  slist.Po  strnlen.Po  strsep.Po  xmalloc.Po
xroar-1.10/src/: Makefile  Makefile.am  Makefile.in  ao.c  ao.h  auto_kbd.c  auto_kbd.h  ay891x.c  ay891x.h  becker.c  becker.h  blockdev.c  blockdev.h  breakpoint.c  cart.c  cart.h  coco3.c  colourspace.c  colourspace.h  crc16.c  crc16.h  crc32.c  crc32.h  crclist.c  crclist.h  deltados.c  deluxecoco.c  dkbd.c  dragon.c  dragon64.c  dragondos.c  dragonpro.c  filereq_cli.c  filter.c  filter.h  fs.c  gdb.c  gdb.h  gmc.c  hexs19.c  (+87 more)
xroar-1.10/src/.deps/: xroar-ao.Po  xroar-auto_kbd.Po  xroar-ay891x.Po  xroar-becker.Po  xroar-blockdev.Po  xroar-breakpoint.Po  xroar-cart.Po  xroar-clock.Po  xroar-coco3.Po  xroar-colourspace.Po  xroar-crc16.Po  xroar-crc32.Po  xroar-crclist.Po  xroar-deltados.Po  xroar-dkbd.Po  xroar-dragon.Po  xroar-dragondos.Po  xroar-events.Po  xroar-filter.Po  xroar-fs.Po  xroar-gdb.Po  xroar-gmc.Po  xroar-hexs19.Po  xroar-hkbd.Po  xroar-hkbd_joystick.Po  xroar-ide.Po  xroar-idecart.Po  xroar-ikon.Po  xroar-joystick.Po  xroar-keyboard.Po  xroar-logging.Po  xroar-machine.Po  xroar-main_unix.Po  xroar-mc10.Po  xroar-mc10_cart.Po  xroar-mc6821.Po  xroar-mc6883.Po  xroar-mcx128.Po  xroar-messenger.Po  xroar-module.Po  (+35 more)
xroar-1.10/src/alsa/: ao_alsa.c
xroar-1.10/src/alsa/.deps/: xroar-ao_alsa.Po
xroar-1.10/src/evdev/: js_evdev.c
xroar-1.10/src/gtk2/: about.c  application.ui  common.c  common.h  dialog.c  dialog.h  drivecontrol.c  drivecontrol.h  drivecontrol.ui  event_handlers.c  event_handlers.h  filereq_gtk2.c  gtk2.gresource.c  gtk2.gresource.xml  joystick_gtk2.c  menu.ui  printercontrol.c  printercontrol.h  printercontrol.ui  tapecontrol.c  tapecontrol.h  tapecontrol.ui  ui_gtk2.c  video_options.c  video_options.h  video_options.ui  vo_gtkgl.c
xroar-1.10/src/gtk3/: about.c  application.ui  common.c  common.h  dialog.c  dialog.h  drivecontrol.c  drivecontrol.h  drivecontrol.ui  event_handlers.c  event_handlers.h  filereq_gtk3.c  gtk3.gresource.c  gtk3.gresource.xml  joystick_gtk3.c  printercontrol.c  printercontrol.h  printercontrol.ui  tapecontrol.c  tapecontrol.h  tapecontrol.ui  ui_gtk3.c  video_options.c  video_options.h  video_options.ui  vo_gtk3.c
xroar-1.10/src/gtk3/.deps/: xroar-about.Po  xroar-common.Po  xroar-dialog.Po  xroar-drivecontrol.Po  xroar-event_handlers.Po  xroar-filereq_gtk3.Po  xroar-gtk3.gresource.Po  xroar-joystick_gtk3.Po  xroar-printercontrol.Po  xroar-tapecontrol.Po  xroar-ui_gtk3.Po  xroar-video_options.Po  xroar-vo_gtk3.Po
xroar-1.10/src/jack/: ao_jack.c
xroar-1.10/src/joydev/: js_joydev.c
xroar-1.10/src/joydev/.deps/: xroar-js_joydev.Po
xroar-1.10/src/macosx/: ao_macosx.c  filereq_cocoa.m  hkbd_darwin.c  hkbd_darwin.h  ui_macosx.h  ui_macosx.m
xroar-1.10/src/mc6801/: mc6801.c  mc6801.h  mc6801_trace.c  mc6801_trace.h
xroar-1.10/src/mc6801/.deps/: xroar-mc6801.Po  xroar-mc6801_trace.Po
xroar-1.10/src/mc6809/: hd6309.c  hd6309.h  hd6309_trace.c  hd6309_trace.h  mc6809.c  mc6809.h
xroar-1.10/src/mc6809/.deps/: xroar-hd6309.Po  xroar-hd6309_trace.Po  xroar-mc6809.Po  xroar-mc6809_trace.Po
xroar-1.10/src/mc680x/: mc680x_ops.c
xroar-1.10/src/mc6847/: mc6847.c  mc6847.h
xroar-1.10/src/mc6847/.deps/: xroar-font-6847.Po  xroar-font-6847t1.Po  xroar-mc6847.Po
xroar-1.10/src/null/: ao_null.c  ui_null.c
xroar-1.10/src/null/.deps/: xroar-ao_null.Po  xroar-ui_null.Po
xroar-1.10/src/oss/: ao_oss.c
xroar-1.10/src/oss/.deps/: xroar-ao_oss.Po
xroar-1.10/src/pulseaudio/: ao_pulse.c
xroar-1.10/src/pulseaudio/.deps/: xroar-ao_pulse.Po
xroar-1.10/src/sdl2/: ao_sdl2.c  common.c  common.h  joystick_sdl2.c  keyboard_sdl2.c  sdl_x11.c  ui_sdl2.c  vo_sdl2.c
xroar-1.10/src/sdl2/.deps/: xroar-ao_sdl2.Po  xroar-common.Po  xroar-joystick_sdl2.Po  xroar-keyboard_sdl2.Po  xroar-sdl_x11.Po  xroar-ui_sdl2.Po  xroar-vo_sdl2.Po
xroar-1.10/src/tcc1014/: font-gime.c  font-gime.h  tcc1014.c  tcc1014.h
xroar-1.10/src/tcc1014/.deps/: xroar-font-gime.Po  xroar-tcc1014.Po
xroar-1.10/src/wasm/: exported_functions  js_wasm.c  wasm.c  wasm.h
xroar-1.10/src/windows32/: about.c  common_windows32.c  common_windows32.h  dialog.c  dialog.h  drivecontrol.c  drivecontrol.h  filereq_windows32.c  guicon.c  guicon.h  hkbd_windows.c  hkbd_windows.h  printercontrol.c  printercontrol.h  resources.h  resources.rc  resources.win  tapecontrol.c  tapecontrol.h  ui_windows32.c  video_options.c  video_options.h  xroar.rc
xroar-1.10/src/x11/: hkbd_x11.c  hkbd_x11.h  hkbd_x11_keycode_tables.h
xroar-1.10/src/x11/.deps/: xroar-hkbd_x11.Po
xroar-1.10/tools/: Makefile  Makefile.am  Makefile.in  font2c.c  hkbd_lang_tables.pl  win2rc  xkb_to_hk_scancode.pl
xroar-1.10/tools/keycodes/: macintosh
xroar-1.10/wasm/: index.shtml  xroar-wasm.css  xroar-wasm.html
