AUTOMAKE_OPTIONS = subdir-objects

AM_CPPFLAGS = -I$(top_srcdir)

noinst_LIBRARIES = libporta.a

libporta_a_SOURCES = \
	array.h \
	c-ctype.c c-ctype.h \
	c-strcase.h \
	c-strcasecmp.c \
	c-strncasecmp.c \
	delegate.c delegate.h \
	intfuncs.c intfuncs.h \
	pl-endian.h \
	pl-estrcpy.c \
	pl-regex.h \
	pl-string.h \
	sds.c sds.h sdsalloc.h \
	sdsx.c sdsx.h \
	slist.c slist.h \
	strnlen.c \
	strsep.c \
	xalloc.h \
	xmalloc.c
